Fixed a bit on how we do ajax queries (we now as /shifts.json and send filters as arguments)

--- a/app/assets/stylesheets/calendar.css
+++ b/app/assets/stylesheets/calendar.css
@@ -100,15 +100,6 @@
 }
 
 
-#filters.hidden .picker
-{
-  display:none;
-}
-
-#filters.hidden .picker.selected
-{
-  display:block !important;
-}
 
 #filters.hidden .option.selected{ display:block !important;}
 #filters.hidden .option{display:none;}
